--- a/_includes/codeSchema.html
+++ b/_includes/codeSchema.html
@@ -2,6 +2,7 @@
     <li>
     <details open> 
         <summary>schemaVersion <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
+        <h5>{{ site.SchemaVersionCode[page.lang] }}</h5>
         <p>{{ site.SchemaVersionCodeDesc[page.lang] }}</p>
     </details> 
     </li>  
@@ -9,6 +10,7 @@
     <li>
     <details open> 
         <summary>adminCode <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
+        <h5>{{ site.AdminCode[page.lang] }}</h5>
         <p>{{ site.AdminCodeDesc[page.lang] }}</p>
     </details>
     </li>  
@@ -21,32 +23,37 @@
             <li>
             <details open> 
                 <summary>contact <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
+                <p>{{ site.ContactCodeDesc[page.lang] }}</p>
                 <ul class="list-unstyled">
                     <li>
                     <details open>
                         <summary>URL [array]</summary>
+                        <h5>{{ site.URLContactName[page.lang] }}</h5>
                         <p>{{ site.URLContactCodeDesc[page.lang] }}</p>
                         <ul>
-                            <li>en [string]</li>
-                            <li>fr [string]</li>
+                            <li>{{ site.URLContactCodeEN[page.lang] }} [string]</li>
+                            <li>{{ site.URLContactCodeFR[page.lang] }} [string]</li>
                         </ul>
                     </details>
                     </li>
                     <li>
                     <details open>
                         <summary>email <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
+                        <h5>{{ site.EmailContactCode[page.lang] }}</h5>
                         <p>{{ site.EmailContactCodeDesc[page.lang] }}</p>
                     </details>
                     </li>
                     <li>
                     <details open>
                         <summary>name [string]</summary>
+                        <h5>{{ site.NameContactCode[page.lang] }}</h5>
                         <p>{{ site.NameContactCodeDesc[page.lang] }}</p>
                     </details>
                     </li>
                     <li>
                     <details open>
                         <summary>phone [string]</summary>
+                        <h5>{{ site.PhoneContactCode[page.lang] }}</h5>
                         <p>{{ site.PhoneContactCodeDesc[page.lang] }}</p>
                     </details>
                     </li>
@@ -57,22 +64,26 @@
             <li>
             <details open> 
                 <summary>date <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
+                <p>{{ site.DateCodeDesc[page.lang] }}</p>
                 <ul class="list-unstyled">
                     <li>
                     <details open>
                         <summary>created <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
+                        <h5>{{ site.CodeCreated[page.lang] }}</h5>
                         <p>{{ site.DateCreatedCodeDesc[page.lang] }}</p>
                     </details>
                     </li>
                     <li>
                     <details open>
                         <summary>lastModified [string]</summary>
+                        <h5>{{ site.LastModifiedCode[page.lang] }}</h5>
                         <p>{{ site.LastModifiedCodeDesc[page.lang] }}</p>
                     </details>
                     </li>
                     <li>
                     <details open>
                         <summary>metadataLastUpdated <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
+                        <h5>{{ site.LastUpdatedCode[page.lang] }}</h5>
                         <p>{{ site.MetaDataLastUpdatedCodeDesc[page.lang] }}</p>
                     </details>
                     </li>
@@ -83,10 +94,11 @@
             <li>
             <details open> 
                 <summary>description <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
+                <h5>{{ site.DescriptionName[page.lang] }}</h5>
                 <p>{{ site.DescriptionCodeDesc[page.lang] }}</p>
                 <ul>
-                    <li>en <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
-                    <li>fr <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+                    <li>{{ site.DescriptionCodeEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+                    <li>{{ site.DescriptionCodeFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
                 </ul>
             </details>
             </li>
@@ -94,10 +106,11 @@
             <li>
             <details open> 
                 <summary>downloadURL [array]</summary>
+                <h5>{{ site.DownloadName[page.lang] }}</h5>
                 <p>{{ site.DownloadURLCodeDesc[page.lang] }}</p>
                 <ul>
-                    <li>en [string]</li>
-                    <li>fr [string]</li>
+                    <li>{{ site.DownloadURLCodeEN[page.lang] }} [string]</li>
+                    <li>{{ site.DownloadURLCodeFR[page.lang] }} [string]</li>
                 </ul>
             </details>
             </li>
@@ -105,11 +118,12 @@
             <li>
             <details open> 
                 <summary>homepageURL [array]</summary>
+                <h5>{{ site.HomepageURLName[page.lang] }}</h5>
                 <p>{{ site.HomepageURLCodeDesc[page.lang] }}</p>
 
                 <ul>
-                    <li>en [string]</li>
-                    <li>fr [string]</li>
+                    <li>{{ site.HomepageURLCodeEN[page.lang] }} [string]</li>
+                    <li>{{ site.HomepageURLCodeFR[page.lang] }} [string]</li>
                 </ul>
             </details>
             </li>
@@ -117,6 +131,7 @@
             <li>
             <details open> 
                 <summary>languages [array]</summary>
+                <h5>{{ site.LanguagesName[page.lang] }}</h5>
                 <p>{{ site.LanguagesCodeDesc[page.lang] }}</p>
             </details>
             </li>
@@ -124,10 +139,11 @@
             <li>
             <details open> 
                 <summary>name <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
+                <h5>{{ site.ProjectName[page.lang] }}</h5>
                 <p>{{ site.NameCodeDesc[page.lang] }}</p>
                 <ul>
-                    <li>en <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
-                    <li>fr <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+                    <li>{{ site.NameCodeEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+                    <li>{{ site.NameCodeFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
                 </ul>
             </details>
             </li>
@@ -135,10 +151,11 @@
             <li>
             <details open> 
                 <summary>organization [array]</summary>
+                <h5>{{ site.OrganizationName[page.lang] }}</h5>
                 <p>{{ site.OrganizationCodeDesc[page.lang] }}</p>
                 <ul>
-                    <li>en [string]</li>
-                    <li>fr [string]</li>
+                    <li>{{ site.OrganizationCodeEN[page.lang] }} [string]</li>
+                    <li>{{ site.OrganizationCodeFR[page.lang] }} [string]</li>
                 </ul>
             </details>
             </li>
@@ -151,26 +168,29 @@
                     <li>
                     <details open>
                         <summary>URL [array]</summary>
+                        <h5>{{ site.URLPartnersName[page.lang] }}</h5>
                         <p>{{ site.URLPartnersCodeDesc[page.lang] }}</p>
                         <ul>
-                            <li>en [string]</li>
-                            <li>fr [string]</li>
+                            <li>{{ site.URLPartnersCodeEN[page.lang] }} [string]</li>
+                            <li>{{ site.URLPartnersCodeFR[page.lang] }} [string]</li>
                         </ul>
                     </details>
                     </li>
                     <li>
                     <details open>
                         <summary>email [string]</summary>
+                        <h5>{{ site.EmailPartnersCode[page.lang] }}</h5>
                         <p>{{ site.EmailPartnersCodeDesc[page.lang] }}</p>
                     </details>
                     </li>
                     <li>
                     <details open>
                         <summary>name [array]</summary>
+                        <h5>{{ site.PartnersName[page.lang] }}</h5>
                         <p>{{ site.NamePartnersCodeDesc[page.lang] }}</p>
                         <ul>
-                            <li>en [string]</li>
-                            <li>fr [string]</li>
+                            <li>{{ site.NamePartnersCodeEN[page.lang] }} [string]</li>
+                            <li>{{ site.NamePartnersCodeFR[page.lang] }} [string]</li>
                         </ul>
                     </details>
                     </li>
@@ -181,22 +201,24 @@
             <li>
             <details open> 
                 <summary>licenses <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
-                <p>{{ site.LicensesDesc[page.lang] }}</p>
+                <p>{{ site.LicensesCodeDesc[page.lang] }}</p>
                 <ul class="list-unstyled">
                     <li>
                     <details open>
                         <summary>URL <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
-                        <p>{{ site.URLLicensesDesc[page.lang] }}</p>
+                        <h5>{{ site.URLLicensesName[page.lang] }}</h5>
+                        <p>{{ site.URLLicensesCodeDesc[page.lang] }}</p>
                         <ul>
-                            <li>en <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
-                            <li>fr <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+                            <li>{{ site.URLLicensesCodeDescEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+                            <li>{{ site.URLLicensesCodeDescFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
                         </ul>
                     </details>
                     </li>
                     <li>
                     <details open>
                         <summary>spdxID <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
-                        <p>{{ site.SpdxIDLicensesDesc[page.lang] }}</p>
+                        <h5>{{ site.SpdxIDLicencesName[page.lang] }}</h5>
+                        <p>{{ site.SpdxIDLicencesCodeDesc[page.lang] }}</p>
                     </details>
                     </li>
                 </ul>
@@ -206,10 +228,11 @@
             <li>
             <details open> 
                 <summary>repositoryURL <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
-                <p>{{ site.RepositoryURLDesc[page.lang] }}</p>
+                <h5>{{ site.RepositoryURLName[page.lang] }}</h5>
+                <p>{{ site.RepositoryURLCodeDesc[page.lang] }}</p>
                 <ul>
-                    <li>en <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
-                    <li>fr <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+                    <li>{{ site.RepositoryURLCodeEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+                    <li>{{ site.RepositoryURLCodeFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
                 </ul>
             </details>
             </li>
@@ -222,20 +245,22 @@
                     <li>
                     <details open>
                         <summary>URL [array]</summary>
+                        <h5>{{ site.URLRelatedCodeName[page.lang] }}</h5>
                         <p>{{ site.URLRelatedCodeDesc[page.lang] }}</p>
                         <ul>
-                            <li>en [string]</li>
-                            <li>fr [string]</li>
+                            <li>{{ site.URLRelatedCodeEN[page.lang] }} [string]</li>
+                            <li>{{ site.URLRelatedCodeFR[page.lang] }} [string]</li>
                         </ul>
                     </details>
                     </li>
                     <li>
                     <details open>
                         <summary>name [array]</summary>
+                        <h5>{{ site.RelatedCodeName[page.lang] }}</h5>
                         <p>{{ site.NameRelatedCodeDesc[page.lang] }}</p>
                         <ul>
-                            <li>en [string]</li>
-                            <li>fr [string]</li>
+                            <li>{{ site.NameRelatedCodeEN[page.lang] }} [string]</li>
+                            <li>{{ site.NameRelatedCodeFR[page.lang] }} [string]</li>
                         </ul>
                     </details>
                     </li>
@@ -246,6 +271,7 @@
             <li>
             <details open> 
                 <summary>status [string]</summary>
+                <h5>{{ site.StatusName[page.lang] }}</h5>
                 <p>{{ site.StatusCodeDesc[page.lang] }}</p>
             </details>
             </li>
@@ -253,10 +279,11 @@
             <li>
             <details open> 
                 <summary>tags <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
+                <h5>{{ site.TagsName[page.lang] }}</h5>
                 <p>{{ site.TagsCodeDesc[page.lang] }}</p>
                 <ul>
-                    <li>en <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array] A list of English keywords</li>
-                    <li>fr <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array] A list of French keywords</li>
+                    <li>{{ site.TagsCodeEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</li>
+                    <li>{{ site.TagsCodeFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</li>
                 </ul>
             </details>
             </li>
@@ -264,6 +291,7 @@
             <li>
             <details open> 
                 <summary>vcs [string]</summary>
+                <h5>{{ site.VcsName[page.lang] }}</h5>
                 <p>{{ site.VcsCodeDesc[page.lang] }}</p>
             </details>
             </li>
@@ -271,6 +299,7 @@
             <li>
             <details open> 
                 <summary>version [string]</summary>
+                <h5>{{ site.VersionName[page.lang] }}</h5>
                 <p>{{ site.VersionCodeDesc[page.lang] }}</p>
             </details>
             </li>
