--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -12,10 +12,31 @@
       <label for="adminCode" class="required">{{ site.AdminCode[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <select class="form-control" id="adminCode" name="adminCode" required="required">
         <option value="">&nbsp;</option>
-        {% for adminsLevel in site.data.administrations %}
-          {% assign adminsInfo = adminsLevel[1]%}
-          {% for adminInfo in adminsInfo %}
-            <option value = "{{ adminInfo.code }}">{{ adminInfo.name[page.lang] }}</option>
+        {% assign admin_array = "" | split: ',' %}
+        {% for fptms in site.data.code %}
+          {% assign fptm = fptms[1] %}
+          {% for admins in fptm %}
+            {% assign admin = admins[1] %}   
+            {% assign aName = site.data.administrations.federal | where: "code", admin.adminCode %}
+            {% if aName[0].name[page.lang] != nil %}
+              <option value="{{ aName[0].code }}">{{ aName[0].name[page.lang] }}</option>
+            {% endif %}
+          {% endfor %}
+          
+          {% for admins in fptm %}
+            {% assign admin = admins[1] %}   
+            {% assign aName = site.data.administrations.provincial | where: "code", admin.adminCode %}
+            {% if aName[0].name[page.lang] != nil %}
+              <option value="{{ aName[0].code }}">{{ aName[0].name[page.lang] }}</option>
+            {% endif %}
+          {% endfor %}
+          
+          {% for admins in fptm %}
+            {% assign admin = admins[1] %}   
+            {% assign aName = site.data.administrations.municipal | where: "code", admin.adminCode %}
+            {% if aName[0].name[page.lang] != nil %}
+              <option value="{{ aName[0].code }}">{{ aName[0].name[page.lang] }}</option>
+            {% endif %}
           {% endfor %}
         {% endfor %}
       </select>
