add new <div> to choose a project when user selects an admininstration

--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -42,6 +42,8 @@
       </select>
     </div>
   
+  <div id="selectedProject" class="form-group"></div>
+
   <h2>{{ site.ContactCodeDesc[page.lang] }}</h2>
     <div class="form-group">
       <label for="enUrlContact">{{ site.URLContactCodeEN[page.lang] }}</label>
