declare some variables. pathNameUrl and enPathName serve to know the language of the actual page (en or fr) -  arraySections will contains all federal, provinicial and municipal informations

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -88,3 +88,11 @@
 <script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/ie8-wet-boew2.min.js"></script>
 <![endif]-->
 <script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/theme.min.js"></script>
+
+<script>
+  var selectedAdminCode = "";
+  var pathNameUrl = window.location.pathname;
+  var enPathName = "/ore-ero/en/open-source-code-form.html";
+  var arraySections = Array();
+
+</script>
