--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -116,5 +116,12 @@
     $("#frRepoUrl").val(project.repositoryURL["fr"]);
   }
 
+  $(document).ready(function(){
+    $("#adminCode").change(function(){
+      $.getJSON("https://canada-ca.github.io/ore-ero/code.json", function(result){
+
+      });
+    });
+  });
 
 </script>
