--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -119,6 +119,27 @@
   $(document).ready(function(){
     $("#adminCode").change(function(){
       $.getJSON("https://canada-ca.github.io/ore-ero/code.json", function(result){
+          $('#selectedProject').empty();
+          arraySections.length = 0;
+          selectedAdminCode = $("#adminCode").val();
+          var federal = result.federal[selectedAdminCode];
+          var provincial = result.provincial[selectedAdminCode];
+          var municipal = result.municipal[selectedAdminCode];
+          
+          arraySections.push(federal, provincial, municipal);
+
+          (pathNameUrl == enPathName)?
+          $('<label for="selectedPro">Select a project </label> <input class="form-control" id="selectedPro" name="selectedPro" type="text" list="listProjects"/><datalist id = "listProjects"></datalist>').appendTo("#selectedProject"): 
+          $('<label for="selectedPro">Sélectionner un projet </label> <input class="form-control" id="selectedPro" name="selectedPro" type="text" list="listProjects"/><datalist id = "listProjects"></datalist>').appendTo("#selectedProject");
+
+          arraySections.forEach(function(section){
+            if(section !== undefined){
+              section.releases.forEach(function(project){    
+                buildProjectField(project);
+              });
+            }
+          })
+
 
       });
     });
