after selecting a project, the form will be filed with informations about the chosen project

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -140,7 +140,17 @@
             }
           })
 
+          $('#selectedPro').change(function(){
+            var pName = $("#selectedPro").val();
 
+            arraySections.forEach(function(section){
+              if(section !== undefined){
+                section.releases.forEach(function(project){    
+                  if(project.name["en"] == pName || project.name["fr"] == pName) fillFields(project);
+                });
+              }
+            })
+          });
       });
     });
   });
