--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -94,6 +94,7 @@
   var pathNameUrl = window.location.pathname;
   var enPathName = "/ore-ero/en/open-source-code-form.html";
   var arraySections = Array();
+  var pName = "";
 
   function buildProjectField(project){
     (pathNameUrl == enPathName) ? 
@@ -102,55 +103,127 @@
   }
 
   function fillFields(project){
-    $("#emailContact").val(project.contact.email);
-    $("#dateCreated").val(project.date.created);
-    $("#dateLastUpdated").val(project.date.metadataLastUpdated);
-    $("#enDescription").val(project.description["en"]);
-    $("#frDescription").val(project.description["fr"]);
-    $("#enProjectName").val(project.name["en"]);
-    $("#frProjectName").val(project.name["fr"]);
-    $("#enUrlLicense").val(project.licenses[0].URL["en"]);
-    $("#frUrlLicense").val(project.licenses[0].URL["fr"]);
-    $("#spdxID").val(project.licenses[0].spdxID);
-    $("#enRepoUrl").val(project.repositoryURL["en"]);
-    $("#frRepoUrl").val(project.repositoryURL["fr"]);
+
+    if(project.contact.URL === undefined)project.contact.URL = "";
+
+    if(project.downloadURL === undefined) project.downloadURL = "";
+
+    if(project.homepageURL === undefined) project.homepageURL = "";
+
+    if(project.organization === undefined) project.organization = "";
+
+    if(project.partners === undefined) project.partners = [];
+    if(project.partners.URL === undefined) project.partners.URL = "";
+    if(project.partners.name === undefined) project.partners.name = "";
+
+    if(project.relatedCode === undefined) {
+      project.relatedCode = [];
+      project.relatedCode[0] = [];
+      project.relatedCode[0].URL = "";
+      project.relatedCode[0].name = "";
+    } 
+
+    var datas_form = {
+      "shemaVersion" : "1.0",
+      "selectedPro" : pName,
+      "enUrlContact" : project.contact.URL["en"],
+      "frUrlContact" : project.contact.URL["fr"],
+      "emailContact" : project.contact.email,
+      "nameContact" : project.contact.name,
+      "phone" : project.contact.phone,
+      "dateCreated" : project.date.created,
+      "dateLastModified" : project.date.lastModified,
+      "dateLastUpdated" : project.date.metadataLastUpdated,
+      
+      "enDescription" : project.description["en"],
+      "frDescription" : project.description["fr"],
+      
+      "enDownloadUrl" : project.downloadURL["en"],
+      "frDownloadUrl" : project.downloadURL["fr"],
+
+      "enHomepageURL" : project.homepageURL["en"],
+      "frHomepageURL" : project.homepageURL["fr"],
+
+      "enProjectName" : project.name["en"],
+      "frProjectName" : project.name["fr"],
+
+      "enOrganization" : project.organization["en"],
+      "frOrganization" : project.organization["fr"],
+
+      "enUrlPartner" : project.partners.URL["en"],
+      "frUrlPartner" : project.partners.URL["fr"],
+      "emailPartner" : project.partners.email,
+      "enNamePartner" : project.partners.name["en"],
+      "frNamePartner" : project.partners.name["fr"],
+
+      "enUrlLicense" : project.licenses[0].URL["en"],
+      "frUrlLicense" : project.licenses[0].URL["fr"],
+      "spdxID" : project.licenses[0].spdxID,
+
+      "enRepoUrl" : project.repositoryURL["en"],
+      "frRepoUrl" : project.repositoryURL["fr"],
+
+      "enUrlRelatedCode" : project.relatedCode[0].URL["en"],
+      "frUrlRelatedCode" : project.relatedCode[0].URL["fr"],
+      "enNameRelatedCode" : project.relatedCode[0].name["en"],
+      "frNameRelatedCode" : project.relatedCode[0].name["fr"],
+
+      "vcs" : project.vcs,
+      "versionProject" : project.version
+    }
+    
+    $("#validation").find('input').val(function(){
+      return datas_form[this.id];
+    });
+
+    $("#status").val(project.status);
+
+    project.languages.forEach(function(language){
+      $('.' + language).attr('checked', true);
+    })
   }
 
   $(document).ready(function(){
     $("#adminCode").change(function(){
       $.getJSON("https://canada-ca.github.io/ore-ero/code.json", function(result){
-          $('#selectedProject').empty();
-          arraySections.length = 0;
-          selectedAdminCode = $("#adminCode").val();
-          var federal = result.federal[selectedAdminCode];
-          var provincial = result.provincial[selectedAdminCode];
-          var municipal = result.municipal[selectedAdminCode];
-          
-          arraySections.push(federal, provincial, municipal);
+      
+        $('#selectedProject').empty();
+        arraySections.length = 0;
+        selectedAdminCode = $("#adminCode").val();
+        $('#validation')[0].reset();
+        $(":checked").attr('checked', false);
+        $('#adminCode').val(selectedAdminCode)
 
-          (pathNameUrl == enPathName)?
-          $('<label for="selectedPro">Select a project </label> <input class="form-control" id="selectedPro" name="selectedPro" type="text" list="listProjects"/><datalist id = "listProjects"></datalist>').appendTo("#selectedProject"): 
-          $('<label for="selectedPro">Sélectionner un projet </label> <input class="form-control" id="selectedPro" name="selectedPro" type="text" list="listProjects"/><datalist id = "listProjects"></datalist>').appendTo("#selectedProject");
+        var federal = result.federal[selectedAdminCode];
+        var provincial = result.provincial[selectedAdminCode];
+        var municipal = result.municipal[selectedAdminCode];
+        
+        arraySections.push(federal, provincial, municipal);
+
+        (pathNameUrl == enPathName)?
+        $('<label for="selectedPro">Select a project </label> <input class="form-control" id="selectedPro" name="selectedPro" type="text" list="listProjects"/><datalist id = "listProjects"></datalist>').appendTo("#selectedProject"): 
+        $('<label for="selectedPro">Sélectionner un projet </label> <input class="form-control" id="selectedPro" name="selectedPro" type="text" list="listProjects"/><datalist id = "listProjects"></datalist>').appendTo("#selectedProject");
+
+        arraySections.forEach(function(section){
+          if(section !== undefined){
+            section.releases.forEach(function(project){    
+              buildProjectField(project);
+            });
+          }
+        })
+
+        $('#selectedPro').change(function(){
+          $(":checked").attr('checked', false);
+          pName = $("#selectedPro").val();
 
           arraySections.forEach(function(section){
             if(section !== undefined){
               section.releases.forEach(function(project){    
-                buildProjectField(project);
+                if(project.name["en"] == pName || project.name["fr"] == pName) fillFields(project);
               });
             }
           })
-
-          $('#selectedPro').change(function(){
-            var pName = $("#selectedPro").val();
-
-            arraySections.forEach(function(section){
-              if(section !== undefined){
-                section.releases.forEach(function(project){    
-                  if(project.name["en"] == pName || project.name["fr"] == pName) fillFields(project);
-                });
-              }
-            })
-          });
+        });
       });
     });
   });
