fix travis error - remove for from the label

--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -234,10 +234,10 @@
   
   <h2>{{ site.TagsCodeDesc[page.lang] }}</h2>
     <div id="tagsEN" class="form-group">
-      <label for="enTag0" class="required">{{ site.TagsCodeEN[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+      <label class="required">{{ site.TagsCodeEN[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
     </div>
     <div id="tagsFR" class="form-group">
-      <label for="frTag0" class="required">{{ site.TagsCodeFR[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+      <label class="required">{{ site.TagsCodeFR[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
     </div>
     <button type="button" class="btn btn-default" onclick = "addMoreTags()">{{ site.AddMoreTags[page.lang] }}</button>
     
